Some changes to the core config

--- a/Website/Web.config
+++ b/Website/Web.config
@@ -28,7 +28,7 @@
       <forms defaultUrl="~/" loginUrl="~/views/login.cshtml" name="miniblog" timeout="10080">
         <credentials passwordFormat="SHA1">
           <!-- Password is "demo". Generate your hash password here http://www.stringfunction.com/sha1-hash.html -->
-          <user name="demo" password="89e495e7941cf9e40e6980d14a16bf023ccd4c91"/>
+          <user name="demo" password="cba3e5811f30062656c3ca668207c664ac4fd535"/>
         </credentials>
       </forms>
     </authentication>
@@ -41,10 +41,10 @@
       <!-- This example uses Hotmail/Outlook.com. Just modify the username and password -->
       <smtp>
         <network enableSsl="true"
-                 host="smtp.live.com"
+                 host="smtp.gmail.com"
                  port="587"
-                 userName="example@outlook.com"
-                 password="1234abcd"/>
+                 userName="roberts.mattroberts@gmail.com"
+                 password=""/>
       </smtp>
     </mailSettings>
   </system.net>
