--- a/Website/Web.config
+++ b/Website/Web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="blog:theme" value="OneColumn"/>
+    <add key="blog:theme" value="MattOneColumn"/>
     <add key="blog:name" value="Matt Roberts Dev Dribbles"/>
     <add key="blog:description" value="A blog mostly about Web Development in .NET"/>
     <add key="blog:image" value="https://github.global.ssl.fastly.net/images/modules/logos_page/Octocat.png"/>
