--- a/Website/Web.config
+++ b/Website/Web.config
@@ -26,7 +26,7 @@
       <forms defaultUrl="~/" loginUrl="~/views/login.cshtml" name="miniblog" timeout="10080">
         <credentials passwordFormat="SHA1">
           <!-- Password is "demo". Generate your hash password here http://www.stringfunction.com/sha1-hash.html -->
-          <user name="demo" password="cba3e5811f30062656c3ca668207c664ac4fd535"/>
+          <user name="mattwoberts" password="cba3e5811f30062656c3ca668207c664ac4fd535"/>
         </credentials>
       </forms>
     </authentication>
