--- a/Website/Web.config
+++ b/Website/Web.config
@@ -2,8 +2,8 @@
 <configuration>
   <appSettings>
     <add key="blog:theme" value="MattOneColumn"/>
-    <add key="blog:name" value="Matt Roberts Dev Dribbles"/>
-    <add key="blog:description" value="A blog mostly about Web Development in .NET"/>
+    <add key="blog:name" value="Matt Roberts Dev Blog"/>
+    <add key="blog:description" value="Matt's Dev Blog - .NET, JS, Azure and General"/>
     <add key="blog:image" value="https://github.global.ssl.fastly.net/images/modules/logos_page/Octocat.png"/>
     <add key="blog:postsPerPage" value="5"/>
     <add key="blog:daysToComment" value="999"/>
